--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,6 +1,6 @@
 input {
-	tcp {
-		port => 5000
+	beats {
+		port => 5044
 	}
 }
 
@@ -9,5 +9,6 @@ input {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
+		index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
 	}
 }
